--- a/customer-service/Dockerfile
+++ b/customer-service/Dockerfile
@@ -1,6 +1,5 @@
-# Dockerfile (ejemplo común para ambos servicios)
-FROM openjdk:17-jdk-alpine
+FROM eclipse-temurin:21-jdk
 WORKDIR /app
 COPY build/libs/*.jar app.jar
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "/app/app.jar"]
+ENTRYPOINT ["java", "-Dspring.h2.console.settings.web-allow-others=true", "-Dspring.h2.console.enabled=true", "-jar", "/app/app.jar"]
