--- a/customer-service/src/main/resources/application.yml
+++ b/customer-service/src/main/resources/application.yml
@@ -5,6 +5,8 @@ app:
 
 spring:
   kafka:
+    admin:
+      auto-create: true
     bootstrap-servers: ${GLOBAL_KAFKA_HOST_PLAIN:localhost:9092}
     consumer:
       group-id: ${MS_NAME:customer_service}
