--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,13 +35,40 @@ services:
     depends_on:
       - kafka
     ports:
-      - "8081:8080"
+      - "8082:8080"
     environment:
       KAFKA_CLUSTERS_0_NAME: local
       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:29092
     networks:
       - kafka-network
 
+  customer-service:
+    build:
+      context: ./customer-service
+      dockerfile: Dockerfile
+    container_name: customer-service
+    ports:
+      - "8080:8080"
+    depends_on:
+      - kafka
+    networks:
+      - kafka-network
+    environment:
+      GLOBAL_KAFKA_HOST_PLAIN: kafka:29092
+  accounts-movements-service:
+    build:
+      context: ./accounts-movements-service
+    container_name: accounts-service
+    ports:
+      - "8081:8080"
+    depends_on:
+      - kafka
+      - customer-service
+    networks:
+      - kafka-network
+    environment:
+      GLOBAL_KAFKA_HOST_PLAIN: kafka:29092
+      CUSTOMER_SERVICE_URL: http://customer-service:8080
 networks:
   kafka-network:
     driver: bridge
